add ul list to index.html

--- a/test.css/tets.css
+++ b/test.css/tets.css
@@ -6,12 +6,11 @@ h2{
 body{
     background-color: royalblue;
 }
-<<<<<<< HEAD
+
 
 p{
-    padding: 56px;
-=======
-p{
-    border: salmon;
->>>>>>> mohsen
-}
+    padding: 56px;}
+
+    ul{
+        color: red;
+    }
